--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
 </head>
 <body>
     <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
+        <div class="hallo">
+            <span>H</span>
+            <span>A</span>
+            <span>L</span>
+            <span>L</span>
+            <span>O</span>
+        </div>
+        <div class="natya">
+            <span>N</span>
+            <span>A</span>
+            <span>T</span>
+            <span>Y</span>
+            <span>A</span>
+        </div>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
@@ -24,7 +32,6 @@
         <button>
             <a href="flower.html">Klik disini</a>
         </button>
-        
     </div>
 </body>
 </html>
