--- a/index.html
+++ b/index.html
@@ -10,20 +10,12 @@
 </head>
 <body>
     <div class="greetings">
-        <div class="hallo">
-            <span>H</span>
-            <span>A</span>
-            <span>L</span>
-            <span>L</span>
-            <span>O</span>
-        </div>
-        <div class="natya">
-            <span>N</span>
-            <span>A</span>
-            <span>T</span>
-            <span>Y</span>
-            <span>A</span>
-        </div>
+    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>H</span>
+        <span>A</span>
+        <span>L</span>
+        <span>L</span>
+        <span>O</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
@@ -32,6 +24,8 @@
         <button>
             <a href="flower.html">Klik disini</a>
         </button>
+        
     </div>
 </body>
 </html>
+
